// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildUserGroupRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Group",
      ],
      "_key": "zendesk_group:14930942538780",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "created_at": "2024-07-15T05:55:19Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 14930942538780,
            "is_public": true,
            "name": "Support",
            "updated_at": "2024-07-15T05:55:19Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/groups/14930942538780.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2024-07-15T05:55:19Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "14930942538780",
      "name": "Support",
      "updatedAt": "2024-07-15T05:55:19Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/groups/14930942538780.json",
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930939946524",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:42Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ingrid.vandijk@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930939946524,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ingrid Van Dijk",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:43Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930939946524.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:42Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ingrid Van Dijk",
      "email": "ingrid.vandijk@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930939946524",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ingrid Van Dijk",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:43Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930939946524.json",
      "username": "ingrid.vandijk@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930940030492",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:46Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "jakub.wojcik@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930940030492,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Jakub Wójcik",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:46Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930940030492.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:46Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Jakub Wójcik",
      "email": "jakub.wojcik@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930940030492",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Jakub Wójcik",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:46Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930940030492.json",
      "username": "jakub.wojcik@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930942403996",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:55:13Z",
            "custom_role_id": 14930953570844,
            "default_group_id": 14930942538780,
            "details": null,
            "email": "poornima@metronlabs.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930942403996,
            "last_login_at": "2024-07-17T13:10:20Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Poornima Babbe",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 14930942539036,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": null,
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-17T13:10:22Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942403996.json",
            "user_fields": {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:55:13Z",
      "createdOn": undefined,
      "defaultGroupId": 14930942538780,
      "displayName": "Poornima Babbe",
      "email": "poornima@metronlabs.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930942403996",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Poornima Babbe",
      "notes": undefined,
      "organizationId": 14930942539036,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-17T13:10:22Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942403996.json",
      "username": "poornima@metronlabs.com",
      "verified": true,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930942602652",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:55:22Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930942602652,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": {
              "content_type": "image/png",
              "content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
              "deleted": false,
              "file_name": "profile_image_14930942602652_21548839.png",
              "height": 80,
              "id": 14930925582876,
              "inline": false,
              "mapped_content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
              "size": 10157,
              "thumbnails": [
                {
                  "content_type": "image/png",
                  "content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_14930942602652_21548839_thumb.png",
                  "height": 32,
                  "id": 14930925584924,
                  "inline": false,
                  "mapped_content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839_thumb.png",
                  "size": 2330,
                  "url": "https://metronsecurity.zendesk.com/api/v2/attachments/14930925584924.json",
                  "width": 32,
                },
              ],
              "url": "https://metronsecurity.zendesk.com/api/v2/attachments/14930925582876.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:55:24Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942602652.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:55:22Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930942602652",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:55:24Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942602652.json",
      "username": "customer@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944445340",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:41Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "taylor.moore@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944445340,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Taylor Moore",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:41Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944445340.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:41Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Taylor Moore",
      "email": "taylor.moore@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944445340",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Taylor Moore",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:41Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944445340.json",
      "username": "taylor.moore@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944507804",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:43Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "zhang.weixu@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944507804,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Zhang Wei Xu",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:43Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944507804.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:43Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Zhang Wei Xu",
      "email": "zhang.weixu@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944507804",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Zhang Wei Xu",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:43Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944507804.json",
      "username": "zhang.weixu@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944575004",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:47Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "luka.jensen@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944575004,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Luka Jensen",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:47Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944575004.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:47Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Luka Jensen",
      "email": "luka.jensen@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944575004",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Luka Jensen",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:47Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944575004.json",
      "username": "luka.jensen@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930955679772",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:45Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "marcus.allen@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930955679772,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Marcus Allen",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:45Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930955679772.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:45Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Marcus Allen",
      "email": "marcus.allen@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930955679772",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Marcus Allen",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:45Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930955679772.json",
      "username": "marcus.allen@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930967793308",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:42Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ella.rivera@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930967793308,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ella Rivera",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:42Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967793308.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:42Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ella Rivera",
      "email": "ella.rivera@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930967793308",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ella Rivera",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:42Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967793308.json",
      "username": "ella.rivera@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930967829788",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:44Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "soobin.do@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930967829788,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Soobin Do",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:44Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967829788.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:44Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Soobin Do",
      "email": "soobin.do@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930967829788",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Soobin Do",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:44Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967829788.json",
      "username": "soobin.do@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985771676",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:41Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "carlos.garcia@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985771676,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Carlos Garcia",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:41Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985771676.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:41Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Carlos Garcia",
      "email": "carlos.garcia@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985771676",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Carlos Garcia",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:41Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985771676.json",
      "username": "carlos.garcia@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985838492",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:44Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ram.sitwat@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985838492,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ram Sitwat",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:44Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985838492.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:44Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ram Sitwat",
      "email": "ram.sitwat@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985838492",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ram Sitwat",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:44Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985838492.json",
      "username": "ram.sitwat@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985879708",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:46Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ana.oliveira@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985879708,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ana Oliveira",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:47Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985879708.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:46Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ana Oliveira",
      "email": "ana.oliveira@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985879708",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ana Oliveira",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:47Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985879708.json",
      "username": "ana.oliveira@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985905052",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:48Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "boonsri.saeli@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985905052,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Boonsri Saeli",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:48Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985905052.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:48Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Boonsri Saeli",
      "email": "boonsri.saeli@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985905052",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Boonsri Saeli",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:48Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985905052.json",
      "username": "boonsri.saeli@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985981724",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:52Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "blake.jackson@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985981724,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Blake Jackson",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:52Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985981724.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:52Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Blake Jackson",
      "email": "blake.jackson@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985981724",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Blake Jackson",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:52Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985981724.json",
      "username": "blake.jackson@example.com",
      "verified": false,
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_group:14930942538780",
      "_key": "zendesk_group:14930942538780|has|zendesk_user:14930942403996",
      "_toEntityKey": "zendesk_user:14930942403996",
      "_type": "zendesk_group_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "zendesk_group",
    "zendesk_user",
    "zendesk_group_has_user",
  ],
  "numCollectedEntities": 16,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchUsers should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930939946524",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:42Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ingrid.vandijk@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930939946524,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ingrid Van Dijk",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:43Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930939946524.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:42Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ingrid Van Dijk",
      "email": "ingrid.vandijk@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930939946524",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ingrid Van Dijk",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:43Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930939946524.json",
      "username": "ingrid.vandijk@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930940030492",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:46Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "jakub.wojcik@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930940030492,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Jakub Wójcik",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:46Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930940030492.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:46Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Jakub Wójcik",
      "email": "jakub.wojcik@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930940030492",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Jakub Wójcik",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:46Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930940030492.json",
      "username": "jakub.wojcik@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930942403996",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:55:13Z",
            "custom_role_id": 14930953570844,
            "default_group_id": 14930942538780,
            "details": null,
            "email": "poornima@metronlabs.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930942403996,
            "last_login_at": "2024-07-17T13:10:20Z",
            "locale": "en-US",
            "locale_id": 1,
            "moderator": true,
            "name": "Poornima Babbe",
            "notes": null,
            "only_private_comments": false,
            "organization_id": 14930942539036,
            "phone": null,
            "photo": null,
            "report_csv": true,
            "restricted_agent": false,
            "role": "admin",
            "role_type": 4,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": null,
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-17T13:10:22Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942403996.json",
            "user_fields": {},
            "verified": true,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:55:13Z",
      "createdOn": undefined,
      "defaultGroupId": 14930942538780,
      "displayName": "Poornima Babbe",
      "email": "poornima@metronlabs.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930942403996",
      "locale": "en-US",
      "localeId": 1,
      "moderator": true,
      "name": "Poornima Babbe",
      "notes": undefined,
      "organizationId": 14930942539036,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": false,
      "role": "admin",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-17T13:10:22Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942403996.json",
      "username": "poornima@metronlabs.com",
      "verified": true,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930942602652",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:55:22Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "customer@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930942602652,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "The Customer",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": {
              "content_type": "image/png",
              "content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
              "deleted": false,
              "file_name": "profile_image_14930942602652_21548839.png",
              "height": 80,
              "id": 14930925582876,
              "inline": false,
              "mapped_content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
              "size": 10157,
              "thumbnails": [
                {
                  "content_type": "image/png",
                  "content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839_thumb.png",
                  "deleted": false,
                  "file_name": "profile_image_14930942602652_21548839_thumb.png",
                  "height": 32,
                  "id": 14930925584924,
                  "inline": false,
                  "mapped_content_url": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839_thumb.png",
                  "size": 2330,
                  "url": "https://metronsecurity.zendesk.com/api/v2/attachments/14930925584924.json",
                  "width": 32,
                },
              ],
              "url": "https://metronsecurity.zendesk.com/api/v2/attachments/14930925582876.json",
              "width": 80,
            },
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:55:24Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942602652.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:55:22Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "The Customer",
      "email": "customer@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930942602652",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "The Customer",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": "https://metronsecurity.zendesk.com/system/photos/14930925582876/profile_image_14930942602652_21548839.png",
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:55:24Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930942602652.json",
      "username": "customer@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944445340",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:41Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "taylor.moore@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944445340,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Taylor Moore",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:41Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944445340.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:41Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Taylor Moore",
      "email": "taylor.moore@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944445340",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Taylor Moore",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:41Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944445340.json",
      "username": "taylor.moore@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944507804",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:43Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "zhang.weixu@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944507804,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Zhang Wei Xu",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:43Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944507804.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:43Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Zhang Wei Xu",
      "email": "zhang.weixu@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944507804",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Zhang Wei Xu",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:43Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944507804.json",
      "username": "zhang.weixu@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930944575004",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:47Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "luka.jensen@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930944575004,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Luka Jensen",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:47Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944575004.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:47Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Luka Jensen",
      "email": "luka.jensen@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930944575004",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Luka Jensen",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:47Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930944575004.json",
      "username": "luka.jensen@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930955679772",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:45Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "marcus.allen@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930955679772,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Marcus Allen",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:45Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930955679772.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:45Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Marcus Allen",
      "email": "marcus.allen@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930955679772",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Marcus Allen",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:45Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930955679772.json",
      "username": "marcus.allen@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930967793308",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:42Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ella.rivera@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930967793308,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ella Rivera",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:42Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967793308.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:42Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ella Rivera",
      "email": "ella.rivera@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930967793308",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ella Rivera",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:42Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967793308.json",
      "username": "ella.rivera@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930967829788",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:44Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "soobin.do@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930967829788,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Soobin Do",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:44Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967829788.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:44Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Soobin Do",
      "email": "soobin.do@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930967829788",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Soobin Do",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:44Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930967829788.json",
      "username": "soobin.do@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985771676",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:41Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "carlos.garcia@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985771676,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Carlos Garcia",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:41Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985771676.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:41Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Carlos Garcia",
      "email": "carlos.garcia@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985771676",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Carlos Garcia",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:41Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985771676.json",
      "username": "carlos.garcia@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985838492",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:44Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ram.sitwat@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985838492,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ram Sitwat",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:44Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985838492.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:44Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ram Sitwat",
      "email": "ram.sitwat@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985838492",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ram Sitwat",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:44Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985838492.json",
      "username": "ram.sitwat@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985879708",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:46Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "ana.oliveira@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985879708,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Ana Oliveira",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:47Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985879708.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:46Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Ana Oliveira",
      "email": "ana.oliveira@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985879708",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Ana Oliveira",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:47Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985879708.json",
      "username": "ana.oliveira@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985905052",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:48Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "boonsri.saeli@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985905052,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Boonsri Saeli",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:48Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985905052.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:48Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Boonsri Saeli",
      "email": "boonsri.saeli@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985905052",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Boonsri Saeli",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:48Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985905052.json",
      "username": "boonsri.saeli@example.com",
      "verified": false,
    },
    {
      "_class": [
        "User",
      ],
      "_key": "zendesk_user:14930985981724",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "active": true,
            "alias": null,
            "created_at": "2024-07-15T05:56:52Z",
            "custom_role_id": null,
            "default_group_id": null,
            "details": null,
            "email": "blake.jackson@example.com",
            "external_id": null,
            "iana_time_zone": "Asia/Kolkata",
            "id": 14930985981724,
            "last_login_at": null,
            "locale": "en-US",
            "locale_id": 1,
            "moderator": false,
            "name": "Blake Jackson",
            "notes": null,
            "only_private_comments": false,
            "organization_id": null,
            "phone": null,
            "photo": null,
            "report_csv": false,
            "restricted_agent": true,
            "role": "end-user",
            "role_type": null,
            "shared": false,
            "shared_agent": false,
            "shared_phone_number": null,
            "signature": null,
            "suspended": false,
            "tags": [],
            "ticket_restriction": "requested",
            "time_zone": "Asia/Kolkata",
            "two_factor_auth_enabled": null,
            "updated_at": "2024-07-15T05:56:52Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985981724.json",
            "user_fields": {},
            "verified": false,
          },
        },
      ],
      "_type": "zendesk_user",
      "active": true,
      "chatOnly": undefined,
      "createdAt": "2024-07-15T05:56:52Z",
      "createdOn": undefined,
      "defaultGroupId": undefined,
      "displayName": "Blake Jackson",
      "email": "blake.jackson@example.com",
      "ianaTimeZone": "Asia/Kolkata",
      "id": "14930985981724",
      "locale": "en-US",
      "localeId": 1,
      "moderator": false,
      "name": "Blake Jackson",
      "notes": undefined,
      "organizationId": undefined,
      "phone": undefined,
      "photoUrl": undefined,
      "restrictedAgent": true,
      "role": "end-user",
      "shared": false,
      "suspended": false,
      "timeZone": "Asia/Kolkata",
      "updatedAt": "2024-07-15T05:56:52Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/users/14930985981724.json",
      "username": "blake.jackson@example.com",
      "verified": false,
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "zendesk_user",
  ],
  "numCollectedEntities": 15,
  "numCollectedRelationships": 0,
}
`;
